# python-for-time-series-notes

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
src/: __init__.py
src/chapter_01/: 01_what_is_time_series.ipynb  02_python_datetime.ipynb  03_time_series_data.ipynb  README.md  __init__.py
src/chapter_02/: 01_datetime_index.ipynb  02_resampling.ipynb  03_shifting_and_lagging.ipynb  04_rolling_and_expanding.ipynb  05_missing_data.ipynb  README.md  __init__.py
src/chapter_03/: 01_time_and_seasonal_plots.ipynb  02_lag_and_autocorrelation_plots.ipynb  03_advanced_visualisation.ipynb  README.md  __init__.py
src/chapter_04/: 01_transformations.ipynb  02_moving_averages.ipynb  03_classical_decomposition.ipynb  04_stl_decomposition.ipynb  README.md  __init__.py
src/chapter_05/: 01_acf_and_pacf.ipynb  02_stationarity.ipynb  03_statistical_tests.ipynb  04_time_series_features.ipynb  README.md  __init__.py
src/chapter_06/: 01_simple_forecasting_methods.ipynb  02_residual_diagnostics.ipynb  03_evaluation_metrics.ipynb  04_cross_validation.ipynb  README.md  __init__.py
src/chapter_07/: 01_simple_exponential_smoothing.ipynb  02_holts_method.ipynb  03_holt_winters.ipynb  04_ets_framework.ipynb  README.md  __init__.py
src/chapter_08/: 01_ar_models.ipynb  02_ma_models.ipynb  03_arima.ipynb  04_seasonal_arima.ipynb  05_arima_vs_ets.ipynb  README.md  __init__.py
src/chapter_09/: 01_regression_with_arima_errors.ipynb  02_sarimax_exogenous_variables.ipynb  03_dynamic_harmonic_regression.ipynb  README.md  __init__.py
tests/: __init__.py
(+25 files in other folders)
