[tool.poetry]
name = "python-for-time-series-notes"
version = "0.1.0"
description = "Study notes and interactive Jupyter notebooks for Time Series Analysis and Forecasting — from fundamentals through ARIMA, Exponential Smoothing, Prophet, Deep Learning, and modern forecasting frameworks"
authors = ["Leandro Mana <leandromana@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.0"
pandas = "^2.2"
matplotlib = "^3.9"
seaborn = "^0.13"
openpyxl = "^3.1"
scikit-learn = "^1.5"
statsmodels = "^0.14"
pmdarima = "^2.0"
prophet = "^1.1"
sktime = "^0.36"
statsforecast = "^2.0"
tensorflow = "^2.16"
keras = "^3.0"

[tool.poetry.group.dev.dependencies]
ipython = "^8.0"
ipykernel = "^6.0"
jupyterlab = "^4.0"
pytest = "^8.0"
ruff = "^0.4"
mypy = "^1.0"
pre-commit = "^4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = false
ignore_missing_imports = true
exclude = ["tests/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
